add path-intellisense and react extensions for vscode

--- a/react/testimonials-freecodecamp/.devcontainer/devcontainer.json
+++ b/react/testimonials-freecodecamp/.devcontainer/devcontainer.json
@@ -21,7 +21,9 @@
 			"extensions": [
 				"dbaeumer.vscode-eslint",
 				"streetsidesoftware.code-spell-checker",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"christian-kohler.path-intellisense",
+				"dsznajder.es7-react-js-snippets"
 			]
 		}
 	},
