--- a/react/testimonials-freecodecamp/.devcontainer/devcontainer.json
+++ b/react/testimonials-freecodecamp/.devcontainer/devcontainer.json
@@ -23,7 +23,9 @@
 				"streetsidesoftware.code-spell-checker",
 				"eamodio.gitlens",
 				"christian-kohler.path-intellisense",
-				"dsznajder.es7-react-js-snippets"
+				"dsznajder.es7-react-js-snippets",
+				"esbenp.prettier-vscode",
+				"redhat.vscode-yaml"
 			]
 		}
 	},
