--- a/react/testimonials-freecodecamp/.vscode/settings.json
+++ b/react/testimonials-freecodecamp/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "[javascriptreact]": {
+  "[javascriptreact][javascript]": {
+    "editor.tabSize": 2,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
