--- a/react/testimonials-freecodecamp/.devcontainer/devcontainer.json
+++ b/react/testimonials-freecodecamp/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
 		"args": {
             "DOCKER_IMAGE_TAG": "18.16-alpine3.17",
             "GIT_VERSION": "2.38.5-r0",
+			"YQ_VERSION": "4.33.3",
             "ZSH_VERSION": "5.9"
         }
 	},
