--- a/react/testimonials-freecodecamp/src/assets/data/testimonials.yaml
+++ b/react/testimonials-freecodecamp/src/assets/data/testimonials.yaml
@@ -6,11 +6,11 @@ testimonials:
     company: Amazon
     image: shawn
     testimonial: >-
-      It's scary to change careers. I only gained confidence that
+      "It's scary to change careers. I only gained confidence that
       I could code by working through the hundreds of hours of free
       lessons on freeCodeCamp. Within a year I had a six-figure
       job as a Software Engineer. <strong>freeCodeCamp changed
-      my life.</strong>
+      my life.</strong>"
 
   - id: 1
     name: Sarah Chima
@@ -19,11 +19,11 @@ testimonials:
     company: ChatDesk
     image: sarah
     testimonial: >-
-      <strong>freeCodeCamp was the gateway to my career</strong>
+      "<strong>freeCodeCamp was the gateway to my career</strong>
       as a software developer. The well-structured curriculum took
       my coding knowledge from a total beginner level to a very
       confident level. It was everything I needed
-      to land my first dev job at an amazing company.
+      to land my first dev job at an amazing company."
 
   - id: 2
     name: Emma Bostian
@@ -32,8 +32,8 @@ testimonials:
     company: Spotify
     image: emma
     testimonial: >-
-      I've always struggled with learning JavaScript.
+      "I've always struggled with learning JavaScript.
       I've taken many courses but freeCodeCamp's course was the one which stuck.
       Studying JavaScript as well as data structures and algorithms on
       <strong>freeCodeCamp gave me the skills<strong> and confidence
-      I needed to land my dream job as a software engineer at Spotify.
+      I needed to land my dream job as a software engineer at Spotify."
