--- a/go/artificial-intelligence/neural-networks-from-scratch/.vscode/launch.json
+++ b/go/artificial-intelligence/neural-networks-from-scratch/.vscode/launch.json
@@ -11,6 +11,16 @@
             "mode": "auto",
             "program": "${workspaceFolder}/cmd",
             "args": []
+        },
+        {
+            "name": "Test Current File",
+            "type": "go",
+            "request": "launch",
+            "mode": "test",
+            "program": "${file}",
+            "env": {},
+            "args": [],
+            "showLog": false
         }
     ]
 
